src/styles/components/panel.css
#panel{

    height: 100%;
    width: 80%;
    position: absolute;
    top: 0;
    left: -100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    background: var( --theme-dark-grey );
    box-shadow: var( --shadow-3 );
    overflow: hidden;
    transition: left 200ms;
    transition-timing-function: cubic-bezier( 0.4, 0.0, 0.2, 1 );
    z-index: 50;

}

.co_authors_layer{

    height: 0;
    width: 80%;
    position: fixed;
    top: 0;
    left: 0;
    background: var( --theme-extra-dark-grey );
    transition: height 200ms cubic-bezier( 0.4, 0.0, 0.2, 1 );
    overflow: auto;
    z-index: 80;

}

.co_authors_layer.open{

    height: 100%;
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    transition: height 300ms cubic-bezier( 0.4, 0.0, 0.2, 1 );

}

.header{

    height: 20%;
    width: calc( 100% - 390px );
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    padding: 30px 30px 30px 330px;

}

.header .holder{

    height: 100%;
    width: 50%;

}
.header .holder.right{

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;

}

.header .holder .name{

    height: 70%;
    margin: 0;
    font-size: 2.5em;
    font-family: Headers;
    color: rgba( 255, 255, 255, 0.8 );
    overflow: hidden;

}

.header .holder .university{

    height: 30%;
    margin: 0;
    font-size: 1em;
    font-family: Bodies;
    color: rgba( 255, 255, 255, 0.6 );
    overflow: hidden;

}

.header .holder.right .number_of_publications{

    margin: 0;
    font-size: 2em;
    font-family: Bodies;
    color: rgba( 255, 255, 255, 0.8 );
    overflow: hidden;

}

.header .holder.right .publications{

    margin: 0;
    font-size: 1em;
    font-family: Bodies;
    color: rgba( 255, 255, 255, 0.6 );
    overflow: hidden;

}

#panel .body{

    height: 80%;
    width: calc( 100% - 330px );
    display: flex;
    justify-content: center;
    padding-left: 330px;
    overflow: auto;

}

#panel .panel_publications_list_wrapper{

    display: flex;
    flex-direction: column;
    align-items: center;

}

#panel .body ul{

    height: auto;
    width: 60%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;
    margin: 0;

}

#panel .body ul .tile.publication{
    width: 100%;
}

#panel .body ul .tile.publication:hover{
    width: 104%;
}

#panel .body ul .tile.publication.spread{
    width: 104%;
}

#panel .co_authors_list{

    position: absolute;
    bottom: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-left: 330px;
    padding-right: 30px;
    opacity: 0;

}

#panel .co_authors_list.fade_in{

    height: 100%;
    width: calc(100% - 360px);
    top: 0;
    opacity: 1;
    transition: opacity 450ms cubic-bezier( 0.4, 0.0, 0.2, 1 );

}

@media screen and ( max-width: 1050px ) {

    #panel{
        width: 900px;
    }

    .co_authors_layer{
        width: 900px
    }

    .tile{
        width: 450px !important;
    }

    .tile:hover{
        width: 459px;
    }

}

